--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "3desafiobackend",
   "version": "1.0.0",
   "description": "",
-  "main": "/src/app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon ./app.js"
   },
   "keywords": [],
   "author": "",
